# popotam

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/Robot2D/: CMakeLists.txt
apps/Robot2D/include/: Problem1.h  Problem1.hxx  Problem1Torque.h  Problem1Torque.hxx  Problem4.h  Problem4.hxx  Problem4Torque.h  Problem4Torque.hxx  Problem7.h  Problem7.hxx  Problem7Torque.h  Problem7Torque.hxx  construct_filename_2D.h
apps/Robot2D/src/: Problem1.cpp  Problem1Torque.cpp  Problem4.cpp  Problem4Torque.cpp  Problem7.cpp  Problem7Torque.cpp  contruct_filename_2D.cpp  test_Robot_2D.cpp
basis_functions/include/: AbstractBasisFunction.h  ApproxMinvoFunction.h  BSplinesFunction.h  BasisFunctionNLP.h  BasisFunctionProblem.h  BasisFunctionProblem.hxx  BernsteinFunction.h  ChooseBasisFunction.h  MinNoFunction.h  MinVariance.h  MinVoFunction.h  OptimizedBasisFunction.h  Polynomial.h  RecursiveBSplinesFunction.h  RecursiveBSplinesFunction2.h  RecursiveFunction.h  RecursiveFunction2.h
basis_functions/src/: AbstractBasisFunction.cpp  ApproxMinvoFunction.cpp  BSplinesFunction.cpp  BasisFunctionNLP.cpp  BernsteinFunction.cpp  ChooseBasisFunction.cpp  MinNoFunction.cpp  MinVariance.cpp  MinVoFunction.cpp  OptimizedBasisFunction.cpp  RecursiveBSplinesFunction.cpp  RecursiveBSplinesFunction2.cpp  RecursiveFunction.cpp  RecursiveFunction2.cpp
include/: AbstractCSP.h  Interval.h  IntervalsContainers.h  IntervalsStateOfTheArt.h  MogsInterval.h  MogsIntervalChief.h  Solver.h  output_infos_ndof.h  utils.h
solvers/include/: AbstractSolver.h  BasisFunctionSolver.h  BissectionBasisFunctionSolver.h  BissectionIntervalSolver.h  ChooseSolver.h  DiscretizationSolver.h  EvalCurrent.h  IntervalEstimator.h  Kronecker.h  PopotamOptions.h  RandomSolver.h  Result.h  SolverOptions.h
solvers/src/: AbstractSolver.cpp  BasisFunctionSolver.cpp  BissectionBasisFunctionSolver.cpp  BissectionIntervalSolver.cpp  ChooseSolver.cpp  DiscretizationSolver.cpp  EvalCurrent.cpp  IntervalEstimator.cpp  Kronecker.cpp  PopotamOptions.cpp  RandomSolver.cpp  Result.cpp  SolverOptions.cpp
src/: Interval.cpp  IntervalsContainers.cpp  IntervalsStateOfTheArt.cpp  MogsInterval.cpp  MogsIntervalChief.cpp  output_infos_ndof.cpp  utils.cpp
